* 2014-10-06 - thorben.betten@open-xchange.com

 - Fix for bug 34748: Added appropriate null guard prior to cleansing from session cache
 - Fix for bug 34741: Improved description for the quota properties
 - Fix for bug 34706: Use timeout-aware operations to distribute either change of local IP address, client identifier or hash string through cluster to prevent the system from
                      increasing number of stalled threads

* 2014-10-06 - ioannis.chouklis@open-xchange.com

 - Fix for bug 34704: Parse the escaped double quotes correctly and convert all octet string literals to their ASCII/Unicode representations

* 2014-10-02 - thorben.betten@open-xchange.com

 - Fix for bug 34608: Cleanse "unified-mail enabled" information from session parameters
 - Fix for bug 34728: Fixed start-up order inside capabilities bundle; ensure cache configuration is done prior to registering capabilities service

* 2014-10-02 - tobias.friedrich@open-xchange.com

 - Fix for bug 34283: Introduced a hard limit when marshalling the XML elements of a WebDAV response with a depth >= 1 recursively

* 2014-10-01 - thorben.betten@open-xchange.com

 - Fix for bug 34710: Pass host name from HostnameService to template

* 2014-09-30 - steffen.templin@open-xchange.com

 - Fix for bug 34628: Distribution lists are not returned as auto-complete results in mail search anymore.

* 2014-09-30 - thorben.betten@open-xchange.com

 - Fix for bug 34676: Reviewed caching behavior and settings. Optimized to avoid superfluous querying of database service

* 2014-09-29 - thorben.betten@open-xchange.com

 - Fix for bug 34668: Special handling for Windows IE 11 Browser in session management
 - Fix for bug 34664: Removed connection from volatile cache if a severe SQL error occurred

* 2014-09-28 - thorben.betten@open-xchange.com

 - Fix for bug 34617: Signal proper write permission in case "ENABLE_INTERNAL_USER_EDIT" is set to "false"